--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 quarkus.resteasy.path=hogehoge-service
-quarkus.resteasy.ignore-application-classes=true
+# quarkus.resteasy.ignore-application-classes=true
