RestAssuredでデバッグ(ステップ実行)するときにタイムアウトする問題の調査

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 quarkus.resteasy.path=hogehoge-service
 # quarkus.resteasy.ignore-application-classes=true
+
+quarkus.http.limits.max-body-time=1000S // ボディの読み込みタイムアウトを30秒に設定
+quarkus.http.limits.max-idle-time=100S // 接続のアイドルタイムアウトを30秒に設定
